fixes #8 WCAG-audit-2024-2025

--- a/react/assets/forus-webshop/scss/includes/blocks/block-push-notifications.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-push-notifications.scss
@@ -84,7 +84,7 @@
             right: 5px;
             top: 5px;
             font-size: 20px;
-            color: #bcc1d3;
+            color: #282B39;
             transition: color .4s;
             z-index: 1;
             width: 25px;
