fix text on pincode-control from dashboards and update select-control area attributes

--- a/react/assets/forus-platform/scss/_common/includes/common.scss
+++ b/react/assets/forus-platform/scss/_common/includes/common.scss
@@ -1548,3 +1548,28 @@ img {
 .invisible {
     visibility: hidden;
 }
+
+.sr-only {
+    border: 0;
+    clip: rect(0, 0, 0, 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+
+    &.sr-only-focusable {
+        &.active, &:focus {
+            clip: auto;
+            height: auto;
+            margin: 0;
+            overflow: visible;
+            width: auto;
+
+            @media screen and (max-width: 767px) {
+                position: static;
+            }
+        }
+    }
+}
