--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -114,7 +114,6 @@
 
 .modal {
     @import 'modals/modal-photo-upload.scss';
-    @import 'modals/modal-physical-cards.scss';
     @import 'modals/modal-voucher-transaction.scss';
     @import 'modals/modal-pin-code.scss';
     @import 'modals/modal-provider-products-required.scss';
@@ -936,6 +935,10 @@ body {
         flex-direction: row;
         align-items: center;
 
+        .card-title {
+            margin: 0 0 !important;
+        }
+
         .card-header-filters {
             display: flex;
             flex-direction: row;
@@ -1715,6 +1718,18 @@ body {
 
                 .keyvalue-value {
                     width: calc(100% - 240px);
+                }
+            }
+        }
+
+        &.card-block-keyvalue-lg {
+            .keyvalue-item {
+                .keyvalue-key {
+                    width: 280px;
+                }
+
+                .keyvalue-value {
+                    width: calc(100% - 280px);
                 }
             }
         }
