--- a/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
@@ -9,6 +9,7 @@
         display: flex;
         padding: 0 0 40px;
         border-bottom: 1px solid var(--border-color);
+        transition: box-shadow 0.4s;
 
         .fund-media {
             width: 52%;
@@ -28,8 +29,7 @@
             display: flex;
             flex-direction: column;
             align-self: center;
-            cursor: default;
-    
+
             .fund-label {
                 margin: 0 0 5px;
                 line-height: 20px;
@@ -79,6 +79,10 @@
             border-bottom: none;
             padding-bottom: 0;
         }
+    }
+
+    a.fund-item:hover {
+        box-shadow: var(--showcase-item-hover-shadow);
     }
 
     @media screen and (min-width: 1000px) {
