--- a/react/assets/forus-webshop/scss/style-webshop-barneveld-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-barneveld-vars.scss
@@ -4,6 +4,7 @@
 // do not use these scss variables outside this file
 $primaryColor: #00747A;
 $primaryColorLight: #F9C301;
+$primaryColorDark: #075155;
 
 :root {
     --zoom: 100%;
@@ -223,9 +224,9 @@ $primaryColorLight: #F9C301;
     --button-primary-decoration: none;
     --button-primary-background: var(--color-primary);
     --button-primary-hover-color: #fff;
-    --button-primary-hover-border: 1px solid var(--color-primary-light);
+    --button-primary-hover-border: 1px solid #{$primaryColorDark};
     --button-primary-hover-decoration: none;
-    --button-primary-hover-background: var(--color-primary-light);
+    --button-primary-hover-background: #{$primaryColorDark};
 
     --button-primary-outline-color: var(--color-primary);
     --button-primary-outline-border: 1px solid var(--color-primary);
