feat: start migrating chatbot UI to platform styles

--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -154,5 +154,7 @@
 @import 'includes/modals/modal-open-in-me';
 @import 'includes/modals/modal-fund-help';
 
+@import 'includes/blocks/block-fund-pre-check-chatbot';
+
 // PAGES
 @import 'includes/pages/voucher';
