--- a/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
@@ -377,4 +377,9 @@ $primaryColorLight: #305dfb;
     // Section order
     --order-page-voucher-map: 0;
     --order-page-voucher-products: 0;
+
+    // Precheck
+    --progress-bar-color: #fff;
+    --progress-bar-background: #9e9e9e;
+    --progress-bar-inner-background: var(--color-primary);
 }
