--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -4,6 +4,9 @@
   min-height: 0;
   display: flex;
   flex-direction: column;
+
+  //TODO: fix font style
+
   .text {
     font: 400 13px/20px var(--base-font);
   }
