--- a/react/assets/forus-platform/scss/_common/blocks/block-inline-edit.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-inline-edit.scss
@@ -1,21 +1,21 @@
-.block.block-inline-copy {
+.block.block-inline-edit {
     display: inline-flex;
     flex-direction: row;
     align-items: center;
     gap: 4px;
     cursor: pointer;
 
-    .inline-copy-icon {
+    .inline-edit-icon {
         display: inline-flex;
         font-size: 16px;
         line-height: 20px;
         height: 20px;
         transition: 0.4s;
-        color: #646f79;
+        color: var(--color-primary);
     }
 
     &:hover {
-        .inline-copy-icon {
+        .inline-edit-icon {
             color: var(--color-primary);
         }
     }
