--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -93,6 +93,7 @@
 @import 'blocks/block-provider-products-required.scss';
 @import 'blocks/block-push-notifications.scss';
 @import 'blocks/block-inline-copy.scss';
+@import 'blocks/block-inline-edit.scss';
 @import 'blocks/block-collapsable.scss';
 @import 'blocks/block-fund-request-assigned.scss';
 @import 'blocks/block-product.scss';
