update filters design for products and providers on webshop

--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -143,6 +143,7 @@
 @import 'includes/blocks/block-lang-control';
 @import 'includes/blocks/block-reservation-address';
 @import 'includes/blocks/block-banner';
+@import 'includes/blocks/block-product-category-filter';
 
 @import 'includes/modals/modal-file-preview';
 @import 'includes/modals/modal-photo-cropper';
