fix: list style for answer-check message from bot

--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -222,6 +222,11 @@
           max-width: 60%;
         }
 
+        ul {
+          list-style-type: disc;
+          list-style-position: inside;
+        }
+
         &--error {
           background: color-mix(in srgb, var(--color-danger) 50%, white) !important;
           border: 2px solid color-mix(in srgb, var(--color-danger) 50%, black);
