add pane separator, add transfer_in to transactions table, update transaction view header

--- a/react/assets/forus-platform/scss/_common/components/forms.scss
+++ b/react/assets/forus-platform/scss/_common/components/forms.scss
@@ -73,6 +73,12 @@
             .form-group {
                 margin-bottom: 0;
             }
+
+            .form-pane-separator {
+                height: 1px;
+                width: 100%;
+                border-bottom: 1px solid var(--border-color);
+            }
         }
 
         &.form-pane-lg {
