chore: code clean-up and added some css

--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -131,6 +131,7 @@
 
             .answer-button {
               background: var(--answer-button-background, blue);
+              color: var(--answer-button-text, white);
 
               //&.disabled {
               //  cursor: not-allowed;
