--- a/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
@@ -382,4 +382,6 @@ $primaryColorLight: #305dfb;
     --progress-bar-color: #fff;
     --progress-bar-background: #9e9e9e;
     --progress-bar-inner-background: var(--color-primary);
+    --answer-button-background: var(--color-primary);
+    --answer-button-hover-background: var(--color-default-light)
 }
