--- a/react/assets/forus-platform/scss/_common/blocks/block-product.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-product.scss
@@ -6,14 +6,80 @@
     gap: 20px;
 
     .block-product-media {
+        display: flex;
         flex: 0 0 190px;
-        border: 1px solid #d4d9dd;
-        border-radius: var(--border-radius);
-        overflow: hidden;
+        flex-direction: column;
+        gap: 15px;
 
         img {
             display: block;
             width: 100%;
+            border: 1px solid #d4d9dd;
+            border-radius: var(--border-radius);
+        }
+
+        .block-product-media-list {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            .block-product-media-list-prev,
+            .block-product-media-list-next {
+                display: flex;
+                color: #646f79;
+                font-size: 22px;
+                line-height: 18px;
+                height: 18px;
+                cursor: pointer;
+                background: none;
+                border: none;
+                padding: 0;
+                margin: 0;
+                appearance: none;
+                outline: none;
+
+                &:focus-visible {
+                    outline: 2px solid #134478;
+                    outline-offset: 2px;
+                }
+            }
+
+            .block-product-media-list-dots {
+                display: flex;
+                flex-direction: row;
+                flex: 1 1 auto;
+                align-items: center;
+                gap: 8px;
+                justify-content: center;
+                padding: 4px 0;
+
+                .block-product-media-list-dot {
+                    display: flex;
+                    flex: 0 0 10px;
+                    height: 10px;
+                    width: 10px;
+                    border-radius: 50%;
+                    background: #a0a4a8;
+                    cursor: pointer;
+                    border: 2px solid #fff;
+                    transition: 0.3s;
+                    appearance: none;
+                    padding: 0;
+                    margin: 0;
+                    background-clip: content-box;
+                    outline: none;
+
+                    &:focus-visible {
+                        outline: 2px solid #134478;
+                        outline-offset: 2px;
+                    }
+
+                    &.block-product-media-list-dot-active {
+                        background: #134478;
+                        border: 2px solid #134478;
+                    }
+                }
+            }
         }
     }
 
