--- a/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
@@ -4,6 +4,27 @@
     cursor: default;
     margin: 0 0 30px;
 
+    .showcase-splash {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 420px;
+        overflow: hidden;
+
+        .showcase-splash-shape {
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            width: 10000px;
+            height: 10000px;
+            transform: translate(-50%, -0);
+            border-radius: 50%;
+            background: var(--color-primary);
+            opacity: 0.05;
+        }
+    }
+
     .showcase-title {
         font: 700 22px/36px var(--base-font);
         color: var(--tc);
@@ -576,6 +597,14 @@
         }
     }
 
+    &.block-showcase-narrow {
+        .section-product {
+            .wrapper {
+                width: calc(1020px + 50px);
+            }
+        }
+    }
+
     @media screen and (max-width: 1300px) {
         .showcase-layout {
             .showcase-aside {
@@ -617,6 +646,10 @@
 
         .showcase-wrapper {
             position: relative;
+        }
+
+        .showcase-splash {
+            display: none;
         }
 
         .showcase-mobile-filters {
