--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -56,6 +56,7 @@
 @import 'includes/blocks/map';
 @import 'includes/blocks/phone-number';
 @import 'includes/blocks/product';
+@import 'includes/blocks/block-product-next';
 @import 'includes/blocks/record_categories';
 @import 'includes/blocks/records';
 @import 'includes/blocks/transactions';
@@ -76,11 +77,13 @@
 @import 'includes/blocks/block-show-more';
 @import 'includes/blocks/block-warning';
 @import 'includes/blocks/block-qr-code';
+@import 'includes/blocks/block-panel-group';
 
 @import 'includes/blocks/block-markdown';
 @import 'includes/blocks/block-showcase';
 @import 'includes/blocks/block-label-tabs';
 @import 'includes/blocks/block-organizations';
+@import 'includes/blocks/block-organization-offices';
 @import 'includes/blocks/block-offices';
 @import 'includes/blocks/block-office';
 @import 'includes/blocks/block-provider';
