--- a/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
@@ -119,6 +119,7 @@
         gap: 20px;
 
         .block-faq-header {
+            width: 100%;
             margin-bottom: 5px;
 
             .block-faq-title {
@@ -131,6 +132,8 @@
         }
 
         .faq-item {
+            width: 100%;
+
             .faq-item-header {
                 padding: 15px 14px 15px 15px;
 
