--- a/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
@@ -115,7 +115,15 @@
         }
     }
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1200px) {
+        .block-faq-header,
+        .block-faq-group,
+        .faq-item {
+            width: 800px;
+        }
+    }
+
+    @media screen and (max-width: 850px) {
         gap: 20px;
 
         .block-faq-header {
@@ -129,6 +137,10 @@
             .block-faq-subtitle {
                 font: 400 12px/20px var(--base-font);
             }
+        }
+
+        .block-faq-group {
+            width: 100%;
         }
 
         .faq-item {
