add todo's for refactoring

--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -1,3 +1,13 @@
+//TODO: remove variables
+//TODO: refactor towards:
+.class_name {
+  // attributes
+  // nested classes
+  //hover, active, etc.
+  //types
+  //media
+}
+//TODO: remove comments and unused sccss
 .block.block-fund-pre-check-chatbot {
   --spacing: 4px;
   height: 75vh;
