--- a/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-general-vars.scss
@@ -379,6 +379,7 @@ $primaryColorLight: #305dfb;
     --order-page-voucher-products: 0;
 
     // Precheck
+    //TODO: remove
     --progress-bar-color: #fff;
     --progress-bar-background: #9e9e9e;
     --progress-bar-inner-background: var(--color-primary);
