--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -1,4 +1,3 @@
-//TODO: remove variables
 //TODO: refactor towards:
 .class_name {
   // attributes
@@ -7,7 +6,6 @@
   //types
   //media
 }
-//TODO: remove comments and unused sccss
 .block.block-fund-pre-check-chatbot {
   --spacing: 4px;
   height: 75vh;
@@ -27,18 +25,14 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    gap: calc(var(--spacing) * 4); // gebruik gap in plaats van margin
+    gap: calc(var(--spacing) * 4);
     margin-bottom: calc(var(--spacing) * 4);
-
-    .reset-button {
-
-    }
   }
 
   .progress-bar {
     width: 100%;
     height: calc(var(--spacing) * 6);
-    background: var(--progress-bar-background);
+    background: #9e9e9e;
     border-radius: calc(infinity * 1px);
     overflow: hidden;
     flex: 1;
@@ -48,10 +42,10 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      background: var(--progress-bar-inner-background);
+      background: mediumblue;
       transition-duration: 300ms;
       border-radius: calc(infinity * 1px);
-      color: var(--progress-bar-color);
+      color: #fff;
       font: var(--base-font);
       font-size: 18px;
     }
@@ -70,10 +64,10 @@
     min-height: 0; // zorgt dat flex-children goed shrinken
     padding: calc(var(--spacing) * 2);
 
-    background: var(--messages-background, #fafafa);
-    border: 1px solid var(--messages-border, #eee);
-    border-radius: var(--border-radius-lg, 12px);
-    box-shadow: var(--box-shadow-md, 0 4px 6px rgba(0, 0, 0, 0.1));
+    background: #fafafa;
+    border: 1px solid #eee;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
     .message-list {
       flex: 1;
@@ -140,8 +134,8 @@
             }
 
             .answer-button {
-              background: var(--answer-button-background, blue);
-              color: var(--answer-button-text, white);
+              background: blue;
+              color: white;
 
               //&.disabled {
               //  cursor: not-allowed;
@@ -149,12 +143,12 @@
               //}
 
               &--is-selected {
-                background: var(--button-disabled-selected-background, purple) !important;
-                color: var(--button-disabled-selected-text, white) !important;
+                background: purple !important;
+                color: white !important;
               }
 
               &:hover {
-                background: var(--answer-button-hover-background, red);
+                background: var(--color-default-light);
               }
 
             }
@@ -175,11 +169,11 @@
             .answer-input {
               width: 100%;
               text-align: center;
-              border: 3px solid var(--answer-input-border-color,  gray);
+              border: 3px solid gray;
               padding-inline: 3px;
               border-radius: calc(var(--spacing) * 2);
               font: 400 16px/1.5em var(--base-font);
-              background: var(--answer-input-background, transparant);
+              background: transparent;
             }
             .answer-input::placeholder {
               font: 300 16px/1.5em var(--base-font);
@@ -192,7 +186,7 @@
               line-height: 1;
               background: transparent;
               //right: 8px;
-              color: var(--answer-icon-color, gray);
+              color: gray;
               padding: 0 2px 0 2px;
               margin-inline: 6px 3px;
               margin-top: 2px;
@@ -203,15 +197,15 @@
             }
 
             .button-icon:hover {
-              color: var(--answer-button-hover, black)
+              color: black;
             }
           }
         }
       }
       .message-item {
         padding: calc(var(--spacing) * 2);
-        border-top-left-radius: var(--border-radius, 8px);
-        border-top-right-radius: var(--border-radius, 8px);
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
 
         width: fit-content;
         max-width: 100%;
@@ -245,18 +239,18 @@
         }
 
         &--user {
-          background: var(--user-message-background, #ddd6fe);
+          background: #ddd6fe;
           margin-left: auto;
           text-align: right;
-          border-bottom-left-radius: var(--border-radius-lg, 8px);
+          border-bottom-left-radius: 8px;
           justify-content: end;
         }
 
         &--bot {
           justify-content: start;
-          background: var(--bot-message-background, #c7d2fe);
+          background: #c7d2fe;
           text-align: left;
-          border-bottom-right-radius: var(--border-radius-lg, 8px);
+          border-bottom-right-radius: 8px;
         }
 
         &--in-progress {
