--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-pre-check-chatbot.scss
@@ -61,7 +61,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    min-height: 0; // zorgt dat flex-children goed shrinken
+    min-height: 0;
     padding: calc(var(--spacing) * 2);
 
     background: #fafafa;
