replace google api fonts with local fonts

--- a/react/assets/forus-webshop/scss/style-webshop-ede-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-ede-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import "./includes/fonts/open-sans";
 
 /*==========  Style Sheet - Vars  ==========*/
 $primaryColor: #3558a2;
