--- a/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700");
+@import "./includes/fonts/lato";
 
 $primaryColor: #2a2a7f;
 $primaryColorLight: #2a2a7f;
