--- a/react/assets/forus-webshop/scss/style-webshop-berkelland-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-berkelland-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700');
+@import "./includes/fonts/source-sans-pro";
 
 /*==========  Style Sheet - Vars  ==========*/
 $primaryColor: #041c37;
