--- a/react/assets/forus-webshop/scss/style-webshop-geertruidenberg-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-geertruidenberg-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,900italic,900,700,700italic,500italic,500,400italic,300,100italic,100,300italic&subset=latin,cyrillic,latin-ext");
+@import "./includes/fonts/roboto";
 
 /*==========  Style Sheet - Vars  ==========*/
 $primaryColor: #666666;
