--- a/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap&subset=latin,cyrillic,latin-ext');
+@import "./includes/fonts/roboto";
 
 // do not use these scss variables outside this file
 $primaryColor: #627c18;
