--- a/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url("https://fonts.googleapis.com/css?family=Cherry+Swash&family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
+@import "./includes/fonts/montserrat";
 
 /*==========  Style Sheet - Vars  ==========*/
 $primaryColor: #90191a;
