--- a/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
@@ -103,8 +103,7 @@ $primaryColorLight: #2f7f6b;
     font-display: swap;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700');
-@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,400i,600,700');
+@import "./includes/fonts/source-sans-pro";
 
 :root {
     --zoom: 100%;
