--- a/react/assets/forus-webshop/scss/style-webshop-wadenheuvel-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-wadenheuvel-vars.scss
@@ -1,5 +1,5 @@
 @import "style-webshop-general-vars";
-@import url('https://fonts.googleapis.com/css2?family=Cantarell&family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');
+@import "./includes/fonts/open-sans";
 
 $primaryColor: #2a2a7f;
 $primaryColorLight: #2a2a7f;
