update voucher layout on webshop

--- a/react/assets/forus-webshop/scss/includes/blocks/block-panel-group.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-panel-group.scss
@@ -6,6 +6,7 @@
     .panel {
         border: 1px solid var(--border-color);
         border-radius: min(calc(var(--border-radius) * 3), 16px);
+        background-color: #ffffff;
 
         .panel-header {
             display: flex;
@@ -70,14 +71,14 @@
         }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 1000px) {
         gap: 8px;
 
         .panel {
             border-radius: min(calc(var(--border-radius) * 2), 12px);
 
             .panel-header {
-                padding: 18px 20px;
+                padding: 20px 25px;
                 gap: 6px;
 
                 .panel-header-icon {
@@ -86,7 +87,7 @@
                 }
 
                 .panel-header-title {
-                    font: 700 18px/24px var(--base-font);
+                    font: 700 20px/24px var(--base-font);
                 }
 
                 .panel-header-toggle {
@@ -100,7 +101,7 @@
             }
 
             .panel-body {
-                padding: 0 20px 20px;
+                padding: 0 25px 25px;
             }
         }
     }
@@ -113,6 +114,7 @@
 
             .panel-header {
                 gap: 5px;
+                padding: 18px 20px;
 
                 .panel-header-icon {
                     font-size: 20px;
@@ -120,7 +122,7 @@
                 }
 
                 .panel-header-title {
-                    font: 700 16px/22px var(--base-font);
+                    font: 700 18px/22px var(--base-font);
                 }
 
                 .panel-header-toggle {
@@ -131,6 +133,10 @@
                         line-height: 26px;
                     }
                 }
+            }
+
+            .panel-body {
+                padding: 0 20px 20px;
             }
         }
     }
