--- a/react/assets/forus-webshop/scss/includes/blocks/transactions.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/transactions.scss
@@ -46,6 +46,10 @@
                     font-size: 18px;
                     color: inherit;
                 }
+
+                svg {
+                    display: none;
+                }
             }
 
             .transactions-item-details {
