--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -60,10 +60,13 @@
 @import 'includes/blocks/record_categories';
 @import 'includes/blocks/records';
 @import 'includes/blocks/transactions';
+@import 'includes/blocks/block-transactions-next';
 @import 'includes/blocks/validations';
 @import 'includes/blocks/validators';
 @import 'includes/blocks/voucher-product';
 @import 'includes/blocks/voucher';
+@import 'includes/blocks/block-voucher-next';
+@import 'includes/blocks/block-voucher-share-options';
 @import 'includes/blocks/vouchers';
 @import 'includes/blocks/fund-add-records';
 @import 'includes/blocks/block-profile';
