--- a/react/assets/forus-webshop/scss/includes/fonts/montserrat.scss
+++ b/react/assets/forus-webshop/scss/includes/fonts/montserrat.scss
@@ -2,26 +2,34 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('./assets/fonts/montserrat/Montserrat-Regular.ttf') format('truetype');
+    src:
+        url('./assets/fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+        url('./assets/fonts/montserrat/Montserrat-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    src: url('./assets/fonts/montserrat/Montserrat-Medium.ttf') format('truetype');
+    src:
+        url('./assets/fonts/montserrat/Montserrat-Medium.woff2') format('woff2'),
+        url('./assets/fonts/montserrat/Montserrat-Medium.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    src: url('./assets/fonts/montserrat/Montserrat-SemiBold.ttf') format('truetype');
+    src:
+        url('./assets/fonts/montserrat/Montserrat-SemiBold.woff2') format('woff2'),
+        url('./assets/fonts/montserrat/Montserrat-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    src: url('./assets/fonts/montserrat/Montserrat-Bold.ttf') format('truetype');
+    src:
+        url('./assets/fonts/montserrat/Montserrat-Bold.woff2') format('woff2'),
+        url('./assets/fonts/montserrat/Montserrat-Bold.ttf') format('truetype');
 }
