--- a/react/assets/forus-webshop/scss/includes/fonts/source-sans-pro.scss
+++ b/react/assets/forus-webshop/scss/includes/fonts/source-sans-pro.scss
@@ -2,33 +2,43 @@
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 400;
-    src: url('./assets/fonts/source-sans-pro/SourceSans3-Regular.ttf') format('truetype');
+    src:
+        url('./assets/fonts/source-sans-pro/SourceSans3-Regular.woff2') format('woff2'),
+        url('./assets/fonts/source-sans-pro/SourceSans3-Regular.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Source Sans Pro';
     font-style: italic;
     font-weight: 400;
-    src: url('./assets/fonts/source-sans-pro/SourceSans3-It.ttf') format('truetype');
+    src:
+        url('./assets/fonts/source-sans-pro/SourceSans3-It.woff2') format('woff2'),
+        url('./assets/fonts/source-sans-pro/SourceSans3-It.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 500;
-    src: url('./assets/fonts/source-sans-pro/SourceSans3-Medium.ttf') format('truetype');
+    src:
+        url('./assets/fonts/source-sans-pro/SourceSans3-Medium.woff2') format('woff2'),
+        url('./assets/fonts/source-sans-pro/SourceSans3-Medium.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 600;
-    src: url('./assets/fonts/source-sans-pro/SourceSans3-SemiBold.ttf') format('truetype');
+    src:
+        url('./assets/fonts/source-sans-pro/SourceSans3-SemiBold.woff2') format('woff2'),
+        url('./assets/fonts/source-sans-pro/SourceSans3-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 700;
-    src: url('./assets/fonts/source-sans-pro/SourceSans3-Bold.ttf') format('truetype');
+    src:
+        url('./assets/fonts/source-sans-pro/SourceSans3-Bold.woff2') format('woff2'),
+        url('./assets/fonts/source-sans-pro/SourceSans3-Bold.ttf') format('truetype');
 }
