--- a/react/assets/forus-webshop/scss/style-webshop-fijnder-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-fijnder-vars.scss
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
+@import "./includes/fonts/open-sans";
 
 // do not use these scss variables outside this file
 $primaryColor: #E6494F;
